update file index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- class CSS SaCode -->
     <style>
         .sacode-bg {
-            background-image: url(/img/base-g.jpg);
+            background-image: url(/img/Base-G-Jayapura.jpg);
             /*Sumber foro dari https://papuansphoto.files.wordpress.com/2015/10/wpid-fb_img_1444910055367.jpg*/
             background-size: cover;
             background-position: top center;
